bug: vf-card arrow alignment (#1562)
* bug: vf-card arrow alignment

Bug: Fixes the vertical centering of the svg arrow on vf-card titles. Also aligns better with the Figma design kit.

* Tweaks

* Bug: vf-section-header vertical centering of arrow

* Update approach to directly target ascender

Cleaner and more cross-browser predictable.

* Remove leftover CSS

--- a/components/vf-card/vf-card.scss
+++ b/components/vf-card/vf-card.scss
@@ -70,6 +70,7 @@
 
 .vf-card__heading__icon {
   fill: currentColor;
+  padding-top: 0.1em; // to compensate for ascender, this value should be fairly consistent across most type families
   transform: translateX(map-get($vf-spacing-map, vf-spacing--100));
   // @todo: some sort of centralised and reusable docs, tokens, guidance on animations
   transition-duration: 125ms;
@@ -116,7 +117,6 @@
         box-shadow: 0 0 .125rem .125rem rgba(color(grey), .75);
       }
     }
-
   }
 
   .vf-card__link:hover .vf-card__heading__icon,
