--- a/components/vf-section-header/vf-section-header.scss
+++ b/components/vf-section-header/vf-section-header.scss
@@ -19,7 +19,6 @@
 }
 .vf-section-header__heading--is-link {
   @include inline-link($vf-link--visited-color: map-get($vf-colors-map, vf-color--blue));
-
   cursor: pointer;
   display: grid;
   grid-column-gap: space(100);
@@ -27,6 +26,7 @@
 
   .vf-section-header__icon {
     fill: currentColor;
+    padding-top: 0.1em; // to compensate for ascender, this value should be fairly consistent across most type families
     transform: translateX(map-get($vf-spacing-map, vf-spacing--100));
     // @todo: some sort of centralised and reusable docs, tokens, guidance on animations
     transition-duration: 125ms;
